 6. Allow activation of Dynamic Playlists listed from More -> Artist:NAME ->
    More -> Dynamic Playlists
 7. Fix showing search results when there are 10, or less, results for a
    category.
 8. Append "?r=MaterialVersion" on classic skin mods changes.
 9. Fix long-press on 'Show extra settings' not passing player ID/MAC.
10. Strip off .html when doing redirects.

1.4.1
-----
 1. Slightly reduce size of 'Scroll queue to current track' icon.
 2. Make current track's background slightly darker for light themes.
 3. Use toolbar text colour for LMS rescan circular progress.
 4. Use default cursor when hover over empty grid items.
 5. Only show progress total if its >= progress done.
 6. Fix colours of icons in info view.
 7. Fix loading of classic skin mods on release builds.
 8. Update Dutch translation.
 9. Fix "%1 Menu"
10. Fix colour of rating stars in bottom toolbar of desktop layout.
11. Fix initialisation of light themes.

1.4.0
-----
 1. Add (optional) screensaver that will kick in after 60 seconds if nothing is
    playing on current player.
 2. Slightly reduce size of Material's caches.
 3. Notify on server updates, and add text stating new version available to
    information dialog.
 4. When searching all categories, perform individual searches and combine
    results.
 5. When pinning items, store placeholders for tags parameter - so that this can
    be altered.
 6. Allow playing of podcast episodes from search reponse.
 7. On mobile devices, only show dotted jump-list if; a grid can be used and
    there are more than 50 items, or a grid cannot be used and there are more
    than 150 items.
 8. Make Podcast HTTP requests via Perl side to avoid CORS errors.
 9. Don't hard-code list of podcast providers, read from JSON resource file.
10. Tweak UI a little; remove shadows, define a set of colours to allow easier
    customisation, use Roboto Mono for monospace font.
11. Fade in/out now-playing cover image when track changes.